#0088 - streams fix challenge